grammar: sync PostgreSQL.g4 with latest schema changes